crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__nonempty_platform_header_header_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "platform \"foo/barbaz\"\n    requires { Model } { main : {} }\n    exposes []\n    packages { foo: \"./foo\" }\n    imports []\n    provides [mainForHost]\n\n"
---
(BeginFile
    (BeginHeaderPlatform
        (BeginCollection Ident=>UpperIdent@4 EndCollection)
        (BeginCollection
            Ident=>LowerIdent@7
            (BeginTypeRecord EndTypeRecord)
        EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection Ident=>LowerIdent@17 String=>String@19 EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection Ident=>LowerIdent@26 EndCollection)
    EndHeaderPlatform)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

