crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__not_multiline_string_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "!\"\"\"\"\"\"\n"
---
(BeginTopLevelDecls HintExpr (* String=>String@1 EndUnaryNot) EndTopLevelDecls)

[=== canfmt below ===]
UnaryOp(Not, String("\"\"\"\"\"\""))

[=== formatted below ===]

