crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__not_multiline_string_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "!\n\"\"\"\n\"\"\"\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr (* String=>String@1 EndUnaryNot) EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
UnaryOp(Not, String("\"\"\"\n\"\"\""))

[=== formatted below ===]

