crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__one_char_string_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\"x\"\n\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("\"x\"")

[=== formatted below ===]

